ingress-test/ingress-nginx-values/nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress2
  namespace: test 
spec:
  type: NodePort
  selector:
     test: nginx2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30009
